--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -418,6 +418,10 @@
   <string name="MediaOverviewActivity_audio">音訊</string>
   <string name="MediaOverviewActivity_video">影片</string>
   <string name="MediaOverviewActivity_image">圖片</string>
+  <string name="MediaOverviewActivity_sent_by_s">由%1$s傳送</string>
+  <string name="MediaOverviewActivity_sent_by_you">由你傳送</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">透過%1$s傳送給%2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">由你傳送給%1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal 通話進行中</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal 通話連線中</string>
