--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -432,6 +432,14 @@
   <string name="MediaOverviewActivity_Grid_view_description">Ruudustikvaade</string>
   <string name="MediaOverviewActivity_List_view_description">Nimekirjavaade</string>
   <string name="MediaOverviewActivity_Selected_description">Valitud</string>
+  <plurals name="MediaOverviewActivity_d_items_s">
+    <item quantity="one">%1$d üksus %2$s</item>
+    <item quantity="other">%1$d üksust %2$s</item>
+  </plurals>
+  <plurals name="MediaOverviewActivity_d_items">
+    <item quantity="one">%1$d üksus</item>
+    <item quantity="other">%1$d üksust</item>
+  </plurals>
   <string name="MediaOverviewActivity_file">Fail</string>
   <string name="MediaOverviewActivity_audio">Audio</string>
   <string name="MediaOverviewActivity_video">Video</string>
